tests/invalid/invalid_option_value_comparation.ri
func main() {
    x: ?int := none;
    _ = x == none; // ok
    _ = x == 1; // fail
}